--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOD2VJtM5y8sFcuGrkprag3PLrIruFQ8RVy8ZVQEHf7w&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nitin's Portfolio</title>
+    <title>EventGig</title>
   </head>
   <body>
     <div id="root"></div>
